--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,16 @@
   display: grid;
   grid-template-columns: minmax(150px, 1fr) 4fr minmax(150px, 1fr);
   margin-top: 5vh;
+
 }
 
 .board{
+  border: 10px white solid;
+  outline: 2px #999999 solid;
+  border-radius: 10vh;
   display: grid;
-  grid-gap: 2px;
+  background-image: linear-gradient(to bottom right, CRIMSON, red, SILVER, green, OLIVEDRAB);
+  grid-gap: 1px;
   //width: 80vh;
   margin: 0 auto;
   grid-template-columns: repeat(20, 4vh);
@@ -28,9 +33,9 @@
 
 
 .cell {
-  border-radius: .5vh;
+  position: relative;
   font-size: 3.5vh;
-  border: none;
+  border: 1px dotted rgba(255,255,255,.2);
 }
 
 .key {
@@ -52,25 +57,35 @@
 }
 
 .beenThere {
-  background-color: SILVER;
+  background-color: rgba(49, 79, 79,.7);
 }
 
 .open {
   background-color: OLIVEDRAB;
 }
 .blocked {
-  background-color: CRIMSON;
+  background-color: FIREBRICK;
 }
 
+.lastMove {
+  background-color: yellow;
+}
 .potentialBoom,
 .actualBoom {
   font-size: 4vh;
-  border: none;
+  background-color: rgba(255,255,255,.7);
+  border: 1px solid white;
 }
 
 .potentialBoom::before,
 .actualBoom::before {
   content: '☠️';
+}
+
+.monster,
+.monster2,
+.monster3 {
+    background-color: rgba(0,0,0,.9);
 }
 
 .monster::before {
@@ -84,7 +99,38 @@
   content: '👹';
 }
 
-
 .lastMove::before {
     content: '🐰'
+}
+
+.bonusScore {
+  font-size: 10px;
+  position: absolute;
+  font-weight: normal;
+}
+
+.neighbor {
+  cursor: pointer;
+}
+
+.c0-19 .bonusScore {
+  //background-color: rgba(255,255,255,.4);
+  top: -12px;
+  //right: -15px;
+  //transform: rotate(45deg);
+}
+
+.c19-0 .bonusScore {
+  bottom: -12px;
+  //left: -15px;
+  //transform: rotate(45deg);
+}
+
+.c0-0 .bonusScore {
+  top: -12px;
+  //left: -20px;
+  //transform: rotate(-45deg);
+}
+.c19-19 .bonusScore {
+ bottom: -12px;
 }
