--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.gameOver .board {
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -o-filter: blur(2px);
+  -ms-filter: blur(2px);
+  filter: blur(2px);
+}
+
+.hiddenMessage {
+  display: none;
+}
+
 .App {
   display: grid;
   grid-template-columns: minmax(150px, 1fr) 4fr minmax(150px, 1fr);
@@ -77,9 +89,11 @@
   border: 1px solid white;
 }
 
-.potentialBoom::before,
-.actualBoom::before {
+.potentialBoom::before {
   content: '☠️';
+}
+.actualBoom::before {
+  content: '💣';
 }
 
 .monster,
