fix neighborhood error

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@
   background-color: #E3F2FD;
   font-size: 2vh;
   padding: 10px;
-  width:80%;
+  width:200px;
   height: 200px;
   border-radius: 150px;
 }
