--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,19 @@
   text-align: right;
 }
 
+.scoreStats {
+  font-family: 'Bungee Inline', sans-serif;
+  font-size: 18px;
+  text-align: right;
+  color: #999999;
+}
+
+.bombReport {
+  margin-left: 10px;
+  font-family: 'Poiret One', sans-serif;
+  font-weight: bolder;
+}
+
 .speech-bubble {
 	position: relative;
 	background: #daf396;
@@ -31,12 +44,18 @@
 }
 
 .startOver {
-  width: 100%;
-  height: 9vh;
-  font-size: 4vh;
+  //width: 100%;
+  //height: 20px;
+  //font-size: 4vh;
   font-weight: bold;
   font-family: 'Open Sans';
-  color: #999999;
+  //color: #999999;
+  background-color: yellow;
+  text-align: center;
+  border: 1px GOLD solid;
+  width: 65%;
+  margin: 0 auto;
+  color: #666666;
   cursor:pointer;
 }
 
@@ -52,7 +71,7 @@
 }
 
 .safeHavenPurchase button {
-  font-size: 4vh;
+  font-size: 22px;
   cursor: pointer;
 }
 
@@ -69,26 +88,47 @@
 }
 
 .smallPrint {
-  font-size: 2vh;
+  font-size: 10px;
   color: #999999;
   font-family: 'Open Sans';
   text-align: left;
 }
 
-.messages {
+.messageList {
+  display: inline-block;
   font-family: 'Open Sans', sans-serif;
-  font-size: 3vh;
-}
-
-.stats {
   font-size: 14px;
+  margin-left: 20px;
+  padding-inline-start: 0px;
+  list-style-type: none;
 }
 
-.resetStatsButton {
-  font-size: 12px;
+li:before {
+  content: '💬';
+  margin-left: 0px;
+  margin-right: 10px;
 }
 
-.gameOver .board {
+.info {
+  font-size: 24px;
+  color: LIGHTBLUE;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.statsRow {
+  font-size: 14px;
+  margin-top: -10px;
+  margin-left: 0px;
+}
+
+.resetStats {
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.gameOver {
   -webkit-filter: blur(2px);
   -moz-filter: blur(2px);
   -o-filter: blur(2px);
@@ -103,27 +143,31 @@
 .board{
   border: 20px white solid;
   outline: 2px #999999 solid;
-  float: left;
+  //text-align: right;
+  //float: left;
   //border-radius: 10vh;
+  margin: 0px auto;
   display: grid;
   background-image: linear-gradient(to bottom right, CRIMSON, red, SILVER, green, OLIVEDRAB);
   grid-gap: 1px;
+  //max-width: 500px;
   width: 80vmin;
   height: 80vmin;
-  margin-left: 25px;
+  //margin-left: 25px;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(20, 1fr);
 }
 
 .infoBox {
   margin-left: 20px;
-  float: left;
-  width: 200px
+  display: inline-block;
+  //width: 200px
 }
 
 .statsBox {
   margin-left: 20px;
-  float: left;
+  //float: left;
+  display:inline-block;
 }
 
 .cell {
@@ -135,20 +179,6 @@
 
 .key {
   text-align: left;
-}
-
-.keyItemWithLabel {
-    display: block;
-    font-size: 12px;
-    margin-right: 10px;
-}
-
-.keyItem {
-  display: inline-block;
-  border: 1px solid #efefef;
-  border-radius: .5vh;
-  width: 1.5vh;
-  height: 1.5vh;
 }
 
 .beenThere {
@@ -177,20 +207,28 @@
 }
 .potentialBoom,
 .actualBoom {
-  font-size: 4vh;
+  font-size: 3.5vmin;
   background-color: rgba(255,255,255,.7);
   border: 1px solid white;
 }
 
 .potentialBoom::before {
   position: absolute;
+  top:.5vmin;
+  left: -.20vmin;
   content: '☠️';
 }
 .actualBoom::before {
-  //position: relative;
   position: absolute;
+  top:.5vmin;
+  left: -.20vmin;
   content: '☠️';
   //content: '💣';
+}
+
+.detonated::before {
+  position: absolute;
+  content: '💥';
 }
 
 .monster,
@@ -198,25 +236,31 @@
 .monster3 {
     position: relative;
     background-color: rgba(136, 14, 79,.9);
+
 }
 
 .monster::before {
   position: absolute;
+  top:3px;
   content: '🐲';
 }
 .monster2::before {
   position: absolute;
+  top:3px;
+  left: 0px;
   content: '👺';
 }
 
 .monster3::before {
   position: absolute;
+  top:2px;
   content: '👹';
 }
 
 .lastMove::before {
     content: '🐰';
-    position: relative;
+    position: absolute;
+    top:4px;
 }
 
 .safeHaven {
@@ -230,7 +274,7 @@
   font-family: 'Poiret One', sans-serif;
   font-size: 10px;
   position: absolute;
-  font-weight: normal;
+  font-weight: bolder;
   font-size: 2.5vh;
   //background-color: rgba(255, 238, 88,0.3);
   //border-radius: 20px;
