--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,7 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   margin-left: 20px;
+  margin-top: 10px;
   padding-inline-start: 0px;
   list-style-type: none;
 }
@@ -118,8 +119,9 @@ li:before {
 
 .statsRow {
   font-size: 14px;
-  margin-top: -10px;
+  //margin-top: -10px;
   margin-left: 0px;
+  margin-bottom: 10px;
 }
 
 .resetStats {
@@ -140,19 +142,25 @@ li:before {
   display: none;
 }
 
+.boardContainer {
+  position: relative;
+}
+
 .board{
   border: 20px white solid;
   outline: 2px #999999 solid;
-  //text-align: right;
-  //float: left;
   //border-radius: 10vh;
-  margin: 0px auto;
+  //padding-top: 10px;
+  margin: 0 auto;
   display: grid;
   background-image: linear-gradient(to bottom right, CRIMSON, red, SILVER, green, OLIVEDRAB);
   grid-gap: 1px;
   //max-width: 500px;
-  width: 80vmin;
-  height: 80vmin;
+  max-width: 100%;
+  min-width: 600px;
+  min-height: 600px;
+  width: 75vmin;
+  height: 75vmin;
   //margin-left: 25px;
   grid-template-columns: repeat(20, 1fr);
   grid-template-rows: repeat(20, 1fr);
@@ -165,15 +173,15 @@ li:before {
 }
 
 .statsBox {
-  margin-left: 20px;
-  //float: left;
-  display:inline-block;
+  margin-top: 10px;
 }
 
 .cell {
   position: relative;
-  font-size: 3vh;
-  line-height: 15px;
+  vertical-align:middle;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
   border: 1px dotted rgba(255,255,255,.2);
 }
 
@@ -207,22 +215,19 @@ li:before {
 }
 .potentialBoom,
 .actualBoom {
-  font-size: 3.5vmin;
-  background-color: rgba(255,255,255,.7);
+  background-color: rgba(255,255,255,.8);
   border: 1px solid white;
 }
 
 .potentialBoom::before {
-  position: absolute;
-  top:.5vmin;
-  left: -.20vmin;
   content: '☠️';
+  position:relative;
+  top: 3px;
 }
 .actualBoom::before {
-  position: absolute;
-  top:.5vmin;
-  left: -.20vmin;
   content: '☠️';
+  position:relative;
+  top: 3px;
   //content: '💣';
 }
 
@@ -236,31 +241,29 @@ li:before {
 .monster3 {
     position: relative;
     background-color: rgba(136, 14, 79,.9);
-
 }
 
 .monster::before {
-  position: absolute;
-  top:3px;
   content: '🐲';
+  position:relative;
+  top: 3px;
 }
 .monster2::before {
-  position: absolute;
-  top:3px;
-  left: 0px;
   content: '👺';
+  position:relative;
+  top: 3px;
 }
 
 .monster3::before {
-  position: absolute;
-  top:2px;
   content: '👹';
+  position:relative;
+  top: 3px;
 }
 
 .lastMove::before {
     content: '🐰';
-    position: absolute;
-    top:4px;
+    position:relative;
+    top: 3px;
 }
 
 .safeHaven {
@@ -275,10 +278,15 @@ li:before {
   font-size: 10px;
   position: absolute;
   font-weight: bolder;
-  font-size: 2.5vh;
+  font-size: 24px;
   //background-color: rgba(255, 238, 88,0.3);
   //border-radius: 20px;
   width:20px;
+  background-color: rgba(255,255,0,.25);
+  width:75px;
+  height:36px;
+  line-height: 36px;
+  border-radius: 15px;
 }
 
 .neighbor {
@@ -286,16 +294,18 @@ li:before {
 }
 
 .c0-19 .bonusScore {
-  top: -20px;
+  top: -40px;
+  left: 15px;
 }
 
 .c19-0 .bonusScore {
-  bottom: -20px;
-  left: -10px;
+  bottom: -40px;
+  left: -50px;
 }
 
 .c19-19 .bonusScore {
- bottom: -20px;
+ bottom: -40px;
+ left: 15px;
 }
 
 .title {
@@ -313,7 +323,23 @@ li:before {
   bottom: 0;
   width: 100%;
   font-size: 10px;
-  text-align: center;
+  text-align: left;
+}
+
+@media (max-width: 992px) {
+  .safeHavenButtons {
+    text-align: right;
+  }
+
+  .salesPitch {
+    font-weight: bold;
+    text-align: right;
+  }
+
+  .smallPrint {
+    font-size: 10px;
+    text-align: right;
+  }
 }
 
 @media (max-width: 576px) {
